# mcic-data-analytics

./: .gitignore  README.md
2.Trabajos/1.SOM/: .~lock.demo_results.xlsx#  README.md  demo_customers.csv  demo_epic.py  demo_products.json  demo_results.csv  demo_results.json  demo_results.xlsx  demo_transactions.xlsx  main.py  pyproject.toml
2.Trabajos/1.SOM/data/samples/: data.csv  products.json  sales.xlsx  students.csv
2.Trabajos/1.SOM/examples/: demo_encoders.py  demo_normalizers.py  som_customer_segmentation.py  som_tutorial.py
2.Trabajos/1.SOM/openspec/: config.yaml
2.Trabajos/1.SOM/openspec/changes/data-normalizers/: design.md  proposal.md  tasks.md
2.Trabajos/1.SOM/openspec/changes/data-sources/: design.md  proposal.md  tasks.md
2.Trabajos/1.SOM/openspec/changes/etl-engine-foundation/: design.md  proposal.md  tasks.md
2.Trabajos/1.SOM/openspec/changes/som-integration/: design.md  proposal.md  tasks.md
2.Trabajos/1.SOM/openspec/changes/text-encoders/: design.md  proposal.md  tasks.md
2.Trabajos/1.SOM/src/analitica/: __init__.py  cli.py  main.py
2.Trabajos/1.SOM/src/analitica/etl/: __init__.py  destination.py  exceptions.py  pipeline.py  source.py  transformer.py
2.Trabajos/1.SOM/src/analitica/normalization/: __init__.py  base.py  scalers.py  transformers.py
2.Trabajos/1.SOM/src/analitica/som/: __init__.py  analyzer.py  config.py  exceptions.py  predictor.py  trainer.py  visualizer.py
2.Trabajos/1.SOM/src/analitica/transformers/: __init__.py  base.py  encoders.py
2.Trabajos/1.SOM/src/analitica/utils/: __init__.py
2.Trabajos/1.SOM/tests/: __init__.py  conftest.py  test_destination.py  test_normalization.py  test_pipeline.py  test_som.py  test_source.py  test_transformer.py
(+15 files in other folders)
